workspace = { members = ["complete"] }
[package]
name = "rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.30.0", features = ["bundled"] }
clap = { version = "4.5.0", features = ["derive"] }
comfy-table = "7.1.0"
